bin/tests/snapshots/bool_simplification__b01828755e286c145f9a8ae65cde7a14_lint.snap
---
source: bin/tests/bool_simplification.rs
---
!(a == b)
---
[bool_simplification] Warning: This boolean expression can be simplified
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ !(a == b)
   │ ────┬────  
   │     ╰────── Try != instead of !(... == ...)
───╯
