bin/tests/snapshots/bool_simplification__b01828755e286c145f9a8ae65cde7a14_lint_errfmt.snap
---
source: bin/tests/bool_simplification.rs
---
!(a == b)
---
<temp_file_path>>1:1:W:18:[bool_simplification] Try `!=` instead of `!(... == ...)`
