bin/tests/snapshots/bool_simplification__b01828755e286c145f9a8ae65cde7a14_lint_json.snap
---
source: bin/tests/bool_simplification.rs
---
!(a == b)
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "bool_simplification",
      "note": "This boolean expression can be simplified",
      "code": 18,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 10
            }
          },
          "message": "Try `!=` instead of `!(... == ...)`",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 10
              }
            },
            "fix": "a != b"
          },
          "fixable": true
        }
      ]
    }
  ]
}
