bin/tests/snapshots/bool_simplification__fix_c4a89866752b06b2afaf58e31a46d4d22467b61f863bc821ac48f67150f58f2b.snap
---
source: bin/tests/bool_simplification.rs
---
!(a == b)

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-!(a == b)
+a != b
