bin/tests/snapshots/bool_simplification__lint_c4a89866752b06b2afaf58e31a46d4d22467b61f863bc821ac48f67150f58f2b.snap
---
source: bin/tests/bool_simplification.rs
---
!(a == b)

---
[W18] Warning: This boolean expression can be simplified
   ╭─[<temp_file_path>:1:1]
   │
 1 │ !(a == b)
   · ────┬────  
   ·     ╰────── Try != instead of !(... == ...)
───╯
